new proj/src/objects/GE_ES_Contracts__c.object
<CustomObject>
    <fields>
        <fullName>GE_PRM_Tier_2__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_PRM_Business_Tier_1__c</controllingField>
            <picklistValues>
                <fullName>Aero Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Energy (DE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Production (D&amp;P)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas Engines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GE Hitachi Nuclear Energy (GEH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Services (GS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Solutions (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Gen Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub Sea Systems (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_3__c</fullName>
        <label>Tier 3 P&amp;L</label>
        <picklist>
            <controllingField>GE_PRM_Tier_2__c</controllingField>
            <picklistValues>
                <fullName>Advanced Sensors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aero Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Filtration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift (AL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blower &amp; Comp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical &amp; Monitoring Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals &amp; Monitoring Solutions (CMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Control Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS-New Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Opex CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Service Multi P&amp;Ls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOS - Upgrades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology (DT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineered Systems (WES)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow &amp; Process Technologies (Dresser)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Tier_4__c</fullName>
        <label>Tier 4 Product</label>
        <picklist>
            <controllingField>GE_PRM_Tier_3__c</controllingField>
            <picklistValues>
                <fullName>Aero Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMIGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytical Instruments (AI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Artificial Lift (AL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management (Aero Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management (Software Solutions)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blowers &amp; Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals &amp; Monitoring Solutions (CMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commtest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Service Agreements (CSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services (CS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Services Agreements (CSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversions, Modifications &amp; Uprates (CM&amp;U)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Detection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Downhole Technology (DT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eddy Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Electrical Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Electrical Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED - Service</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contract PRM</label>
    <nameField>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract PRM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>